--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 body{
     background: rgb(34, 33, 33);
-    font-family: Poppins,Arial,sans-serif;
+    font-family: "Poppins";
     color: aliceblue;
 }
 
@@ -125,7 +126,7 @@ body{
 
   .fill-purple
 {
-  background-image: linear-gradient(90deg, #4addff, #a34dfe);
+  background-image: linear-gradient(90deg, #a72b69, #c41280);
 }
 
 .fill-green
@@ -234,8 +235,10 @@ body{
     font-size: 20px;
 color: #161515;
 font-weight: 200;
-font-family:sans-serif;
-line-height: 1.6em;
+
+line-height: 1.6em; 
+font-family: poppins;
+   font-weight: 500;
 
 }
 #cardtext:hover{
